--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 #spring.jpa.hibernate.ddl-auto=none
 
 #spring.datasource.continue-on-error=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.devtools.add-properties=false
